Creature input style element

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,2 +1,6 @@
-include layout/layout
-include project/form-elements/input/input
+doctype html
+
+html(lang="ru")
+    include layout/head/head
+    body 
+        include project/form-elements/input/input
