--- a/src/project/form-elements/input/input.pug
+++ b/src/project/form-elements/input/input.pug
@@ -1,2 +1,4 @@
-label(for="")
-    input(type="text")
+.input 
+    .input__text text Field 
+    label(for="")
+        input(type="text" placeholder="Email")
