--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,6 @@
 doctype html
 
 html(lang="ru")
-    include layout/head/head
-    body 
-        include project/form-elements/input/input
+    include layout/head/head.pug
+    body
+        include project/form-elements/input/input.pug
