--- a/src/project/form-elements/input/input.pug
+++ b/src/project/form-elements/input/input.pug
@@ -1,4 +1,4 @@
 .input 
-    .input__text text Field 
+    .input__text test text
     label(for="")
-        input(type="text" placeholder="Email")
+        input(type="email" placeholder="Email").input_hover-focus
