--- a/src/project/form-elements/input/_hover-focus/input_hover-focus.scss
+++ b/src/project/form-elements/input/_hover-focus/input_hover-focus.scss
@@ -1,10 +1,10 @@
 @use '../../../../layout/colors/colors' as colors;
 @mixin hover-focus{
-    &:focus {
+    &_hover-focus:hover{
         border-color: colors.$color-dark-shade50;
-        color: colors.$color-dark-shade75;
     }
-    &:hover{
-        border-color: colors.$color-dark-shade50;
+    &_hover-focus:focus {
+        @extend :hover;
+        color: colors.$color-dark-shade75;
     }
 }
