--- a/src/project/form-elements/input/input.pug
+++ b/src/project/form-elements/input/input.pug
@@ -2,4 +2,4 @@ mixin input(title, placeholder)
     .input
         .input.title-form= title
         label(for="")
-            input(type="email" placeholder= placeholder).input_hover-focus
+            input(type="email" placeholder= placeholder)
