--- a/src/project/form-elements/input/input.scss
+++ b/src/project/form-elements/input/input.scss
@@ -2,8 +2,19 @@
 @use '../input/_hover-focus/input_hover-focus.scss';
 @use '../../../layout/mixin/mixin.scss';
 
+input {
+    color: colors.$color-dark-shade75;
+    border: 1px solid colors.$color-dark-shade25;
+    padding: 13px 15px;
+    border-radius: 4px;
+    width: 100%;
+    &::placeholder{
+        color: colors.$color-dark-shade25;
+    }
+    @include input_hover-focus.hover-focus;
+}
+
 .input {
 @include mixin.input-drop;
-    @include input_hover-focus.hover-focus;
 }
 
