Edit class in input

--- a/src/project/form-elements/input/input.pug
+++ b/src/project/form-elements/input/input.pug
@@ -1,5 +1,5 @@
 mixin input(title, placeholder)
     .input
-        .input.title-form= title
+        .input__title.title-form= title
         label(for="")
             input(type="email" placeholder= placeholder)
