--- a/src/layout/colors/_colors.scss
+++ b/src/layout/colors/_colors.scss
@@ -5,3 +5,5 @@ $color-dark-shade25: #C7C7CF;
 $color-dark-shade5: #F4F4F5;
 $color-green: #6FCF97;
 $color-purple: #BC9CFF;
+
+$Primary-Gradient: linear-gradient( #BC9CFF, #8BA4F9);
