Edit pseudoclass focus

--- a/src/project/form-elements/input/input.pug
+++ b/src/project/form-elements/input/input.pug
@@ -1,5 +1,5 @@
 mixin input(title, placeholder)
     .input
         .input__title.title-form= title
-        label(for="")
+        label(for="").text-enter
             input(type="email" placeholder= placeholder)
