--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,9 @@
 include project/form-elements/input/input.pug
 include project/form-elements/dropdown/dropdown
+include project/form-elements/date-dropdown/date-dropdown
+include project/form-elements/filter-date-dropdown/filter-date-dropdown
+include project/form-elements/subscription/subscription
+
 
 doctype html
 
@@ -7,4 +11,10 @@ html(lang="ru")
     include layout/head/head.pug
     body
         +dropdown("Dropdown", "Сколько гостей")
-        +input("Input", "Email")
+        //- .date
+        //-     +date-dropdown("Date dropdown", "дд.мм.гггг")
+        //-     +date-dropdown("Date dropdown", "19.08.2019")
+        //- +filter-date-dropdown("Filter Date Dropdown", "19 авг - 23 авг ")
+        +input("Test", "Test 2")
+        +input-subscription("subscription text field", "Email")
+
