--- a/src/layout/mixin/_hover-focus/_hover-focus.scss
+++ b/src/layout/mixin/_hover-focus/_hover-focus.scss
@@ -1,7 +1,7 @@
 @use '../../colors/colors' as colors;
 
 @mixin hover-focus{
-    &:hover, &:focus{
+    &:hover, &:focus-within{
         border-color: colors.$color-dark-shade50;
     }
 }
